up code tự tạo attendance và result; hiện schedule khi status enrollment là paid đối với student